// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CategoriesSummary > creates snapshot 1`] = `
<DocumentFragment>
  <div
    class="align-items-center d-flex flex-column flex-md-row _summary_a838a2 flex-lg-column flex-xl-row"
  >
    <div
      class="d-none d-md-block d-lg-none d-xl-block d-lg-none d-xl-block"
    >
      <div
        class="d-flex flex-column me-0 me-sm-4 mb-2 mb-sm-0"
      >
        <div
          class="d-flex align-items-center justify-content-center rounded-pill RoundScore-module_score__AbYPP undefined"
          data-testid="global-score"
        >
          <div
            class="RoundScore-module_chart__s05eS"
          >
            <svg
              class="d-block"
              viewBox="0 0 36 36"
            >
              <path
                class="RoundScore-module_circleBg__3qRLN"
                d="M18 2.0845
          a 15.9155 15.9155 0 0 1 0 31.831
          a 15.9155 15.9155 0 0 1 0 -31.831"
              />
              <path
                class="RoundScore-module_circle__C-6ak"
                d="M18 2.0845
          a 15.9155 15.9155 0 0 1 0 31.831
          a 15.9155 15.9155 0 0 1 0 -31.831"
                stroke-dasharray="65, 100"
                style="stroke: var(--clo-yellow);"
              />
              <text
                class="RoundScore-module_value__mx3Fe"
                x="18"
                y="23"
              >
                65
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-grow-1 w-100 position-relative"
    >
      <div
        class="row"
      >
        <div
          class="_wrapper_e29e1e col-12"
        >
          <div
            class="d-flex flex-row bg-white position-relative border border-1 overflow-hidden"
          >
            <div
              class="d-flex flex-row align-items-center text-muted fw-bold flex-nowrap px-1 my-auto _title_e29e1e"
            >
              <span
                class="pe-1 d-inline-block position-relative _icon_e29e1e"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </span>
              <span
                class="text-truncate"
              >
                Documentation
              </span>
            </div>
            <div
              class="text-center fw-bold font-monospace _value_e29e1e "
            >
              85
            </div>
            <div
              class="flex-grow-1 position-relative mx-2 _progressWrapper_e29e1e  "
            >
              <div
                class="position-absolute start-0 top-0 bottom-0 _line_e29e1e"
                data-testid="line"
                style="width: 85%; background-color: var(--clo-green);"
              />
            </div>
          </div>
        </div>
        <div
          class="_wrapper_e29e1e col-12"
        >
          <div
            class="d-flex flex-row bg-white position-relative border border-1 overflow-hidden"
          >
            <div
              class="d-flex flex-row align-items-center text-muted fw-bold flex-nowrap px-1 my-auto _title_e29e1e"
            >
              <span
                class="pe-1 d-inline-block position-relative _icon_e29e1e"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 32c-70.7 0-128 57.3-128 128s57.3 128 128 128 128-57.3 128-128S326.7 32 256 32zm0 208c-44.2 0-80-35.8-80-80s35.8-80 80-80 80 35.8 80 80-35.8 80-80 80zM193.7 307.4c-19.1-8.1-36.2-19.6-50.8-34.3-1.4-1.4-2.8-2.8-4.1-4.3L64 400h96l48 80 48-105.8 25.5-56.2c-8.4 1.3-16.9 2-25.5 2-21.6 0-42.5-4.2-62.3-12.6zM373.3 268.9c-1.3 1.4-2.7 2.9-4.1 4.3-14.6 14.6-31.7 26.2-50.7 34.2L294 361.2l-21.9 48.4L304 480l48-80h96l-74.7-131.1z"
                  />
                </svg>
              </span>
              <span
                class="text-truncate"
              >
                License
              </span>
            </div>
            <div
              class="text-center fw-bold font-monospace _value_e29e1e "
            >
              80
            </div>
            <div
              class="flex-grow-1 position-relative mx-2 _progressWrapper_e29e1e  "
            >
              <div
                class="position-absolute start-0 top-0 bottom-0 _line_e29e1e"
                data-testid="line"
                style="width: 80%; background-color: var(--clo-green);"
              />
            </div>
          </div>
        </div>
        <div
          class="_wrapper_e29e1e col-12"
        >
          <div
            class="d-flex flex-row bg-white position-relative border border-1 overflow-hidden"
          >
            <div
              class="d-flex flex-row align-items-center text-muted fw-bold flex-nowrap px-1 my-auto _title_e29e1e"
            >
              <span
                class="pe-1 d-inline-block position-relative _icon_e29e1e"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 4.60434V13.7889C5 15.1263 5.6684 16.3752 6.7812 17.1171L12 20.5963L17.2188 17.1171C18.3316 16.3752 19 15.1263 19 13.7889V4.60434L12 3.04879L5 4.60434ZM3.78307 2.82598L12 1L20.2169 2.82598C20.6745 2.92766 21 3.33347 21 3.80217V13.7889C21 15.795 19.9974 17.6684 18.3282 18.7812L12 23L5.6718 18.7812C4.00261 17.6684 3 15.795 3 13.7889V3.80217C3 3.33347 3.32553 2.92766 3.78307 2.82598ZM12 13.5L9.06107 15.0451L9.62236 11.7725L7.24472 9.45492L10.5305 8.97746L12 6L13.4695 8.97746L16.7553 9.45492L14.3776 11.7725L14.9389 15.0451L12 13.5Z"
                  />
                </svg>
              </span>
              <span
                class="text-truncate"
              >
                Best Practices
              </span>
            </div>
            <div
              class="text-center fw-bold font-monospace _value_e29e1e "
            >
              95
            </div>
            <div
              class="flex-grow-1 position-relative mx-2 _progressWrapper_e29e1e  "
            >
              <div
                class="position-absolute start-0 top-0 bottom-0 _line_e29e1e"
                data-testid="line"
                style="width: 95%; background-color: var(--clo-green);"
              />
            </div>
          </div>
        </div>
        <div
          class="_wrapper_e29e1e col-12"
        >
          <div
            class="d-flex flex-row bg-white position-relative border border-1 overflow-hidden"
          >
            <div
              class="d-flex flex-row align-items-center text-muted fw-bold flex-nowrap px-1 my-auto _title_e29e1e"
            >
              <span
                class="pe-1 d-inline-block position-relative _icon_e29e1e"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C9.243 2 7 4.243 7 7v2H6c-1.103 0-2 .897-2 2v9c0 1.103.897 2 2 2h12c1.103 0 2-.897 2-2v-9c0-1.103-.897-2-2-2h-1V7c0-2.757-2.243-5-5-5zM9 7c0-1.654 1.346-3 3-3s3 1.346 3 3v2H9V7zm9.002 13H13v-2.278c.595-.347 1-.985 1-1.722 0-1.103-.897-2-2-2s-2 .897-2 2c0 .736.405 1.375 1 1.722V20H6v-9h12l.002 9z"
                  />
                </svg>
              </span>
              <span
                class="text-truncate"
              >
                Security
              </span>
            </div>
            <div
              class="text-center fw-bold font-monospace _value_e29e1e "
            >
              0
            </div>
            <div
              class="flex-grow-1 position-relative mx-2 _progressWrapper_e29e1e  "
            >
              <div
                class="position-absolute start-0 top-0 bottom-0 _line_e29e1e"
                data-testid="line"
                style="width: 1%; background-color: var(--clo-red);"
              />
            </div>
          </div>
        </div>
        <div
          class="_wrapper_e29e1e col-12"
        >
          <div
            class="d-flex flex-row bg-white position-relative border border-1 overflow-hidden"
          >
            <div
              class="d-flex flex-row align-items-center text-muted fw-bold flex-nowrap px-1 my-auto _title_e29e1e"
            >
              <span
                class="pe-1 d-inline-block position-relative _icon_e29e1e"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.75 2.75V4.5h1.975c.351 0 .694.106.984.303l1.697 1.154c.041.028.09.043.14.043h4.102a.75.75 0 0 1 0 1.5H20.07l3.366 7.68a.749.749 0 0 1-.23.896c-.1.074-.203.143-.31.206a6.296 6.296 0 0 1-.79.399 7.349 7.349 0 0 1-2.856.569 7.343 7.343 0 0 1-2.855-.568 6.205 6.205 0 0 1-.79-.4 3.205 3.205 0 0 1-.307-.202l-.005-.004a.749.749 0 0 1-.23-.896l3.368-7.68h-.886c-.351 0-.694-.106-.984-.303l-1.697-1.154a.246.246 0 0 0-.14-.043H12.75v14.5h4.487a.75.75 0 0 1 0 1.5H6.763a.75.75 0 0 1 0-1.5h4.487V6H9.275a.249.249 0 0 0-.14.043L7.439 7.197c-.29.197-.633.303-.984.303h-.886l3.368 7.68a.75.75 0 0 1-.209.878c-.08.065-.16.126-.31.223a6.077 6.077 0 0 1-.792.433 6.924 6.924 0 0 1-2.876.62 6.913 6.913 0 0 1-2.876-.62 6.077 6.077 0 0 1-.792-.433 3.483 3.483 0 0 1-.309-.221.762.762 0 0 1-.21-.88L3.93 7.5H2.353a.75.75 0 0 1 0-1.5h4.102c.05 0 .099-.015.141-.043l1.695-1.154c.29-.198.634-.303.985-.303h1.974V2.75a.75.75 0 0 1 1.5 0ZM2.193 15.198a5.414 5.414 0 0 0 2.557.635 5.414 5.414 0 0 0 2.557-.635L4.75 9.368Zm14.51-.024c.082.04.174.083.275.126.53.223 1.305.45 2.272.45a5.847 5.847 0 0 0 2.547-.576L19.25 9.367Z"
                  />
                </svg>
              </span>
              <span
                class="text-truncate"
              >
                Legal
              </span>
            </div>
            <div
              class="text-center fw-bold font-monospace _value_e29e1e "
            >
              75
            </div>
            <div
              class="flex-grow-1 position-relative mx-2 _progressWrapper_e29e1e  "
            >
              <div
                class="position-absolute start-0 top-0 bottom-0 _line_e29e1e"
                data-testid="line"
                style="width: 75%; background-color: var(--clo-green);"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CategoriesSummary creates snapshot 1`] = `
<DocumentFragment>
  <div
    class="align-items-center d-flex flex-column flex-md-row summary flex-lg-column flex-xl-row"
  >
    <div
      class="d-none d-md-block d-lg-none d-xl-block d-lg-none d-xl-block"
    >
      <div
        class="d-flex flex-column me-0 me-sm-4 mb-2 mb-sm-0"
      >
        <div
          class="d-flex align-items-center justify-content-center rounded-pill RoundScore-module_score__AbYPP undefined"
          data-testid="global-score"
        >
          <div
            class="RoundScore-module_chart__s05eS"
          >
            <svg
              class="d-block"
              viewBox="0 0 36 36"
            >
              <path
                class="RoundScore-module_circleBg__3qRLN"
                d="M18 2.0845
          a 15.9155 15.9155 0 0 1 0 31.831
          a 15.9155 15.9155 0 0 1 0 -31.831"
              />
              <path
                class="RoundScore-module_circle__C-6ak"
                d="M18 2.0845
          a 15.9155 15.9155 0 0 1 0 31.831
          a 15.9155 15.9155 0 0 1 0 -31.831"
                stroke-dasharray="65, 100"
                style="stroke: var(--clo-yellow);"
              />
              <text
                class="RoundScore-module_value__mx3Fe"
                x="18"
                y="23"
              >
                65
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-grow-1 w-100 position-relative"
    >
      <div
        class="row"
      >
        <div
          class="wrapper col-12"
        >
          <div
            class="d-flex flex-row bg-white position-relative border border-1 overflow-hidden"
          >
            <div
              class="d-flex flex-row align-items-center text-muted fw-bold flex-nowrap px-1 my-auto title"
            >
              <span
                class="pe-1 d-inline-block position-relative icon"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </span>
              <span
                class="text-truncate"
              >
                Documentation
              </span>
            </div>
            <div
              class="text-center fw-bold font-monospace value "
            >
              85
            </div>
            <div
              class="flex-grow-1 position-relative mx-2 progressWrapper  "
            >
              <div
                class="position-absolute start-0 top-0 bottom-0 line"
                data-testid="line"
                style="width: 85%;"
              />
            </div>
          </div>
        </div>
        <div
          class="wrapper col-12"
        >
          <div
            class="d-flex flex-row bg-white position-relative border border-1 overflow-hidden"
          >
            <div
              class="d-flex flex-row align-items-center text-muted fw-bold flex-nowrap px-1 my-auto title"
            >
              <span
                class="pe-1 d-inline-block position-relative icon"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 32c-70.7 0-128 57.3-128 128s57.3 128 128 128 128-57.3 128-128S326.7 32 256 32zm0 208c-44.2 0-80-35.8-80-80s35.8-80 80-80 80 35.8 80 80-35.8 80-80 80zM193.7 307.4c-19.1-8.1-36.2-19.6-50.8-34.3-1.4-1.4-2.8-2.8-4.1-4.3L64 400h96l48 80 48-105.8 25.5-56.2c-8.4 1.3-16.9 2-25.5 2-21.6 0-42.5-4.2-62.3-12.6zM373.3 268.9c-1.3 1.4-2.7 2.9-4.1 4.3-14.6 14.6-31.7 26.2-50.7 34.2L294 361.2l-21.9 48.4L304 480l48-80h96l-74.7-131.1z"
                  />
                </svg>
              </span>
              <span
                class="text-truncate"
              >
                License
              </span>
            </div>
            <div
              class="text-center fw-bold font-monospace value "
            >
              80
            </div>
            <div
              class="flex-grow-1 position-relative mx-2 progressWrapper  "
            >
              <div
                class="position-absolute start-0 top-0 bottom-0 line"
                data-testid="line"
                style="width: 80%;"
              />
            </div>
          </div>
        </div>
        <div
          class="wrapper col-12"
        >
          <div
            class="d-flex flex-row bg-white position-relative border border-1 overflow-hidden"
          >
            <div
              class="d-flex flex-row align-items-center text-muted fw-bold flex-nowrap px-1 my-auto title"
            >
              <span
                class="pe-1 d-inline-block position-relative icon"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 4.60434V13.7889C5 15.1263 5.6684 16.3752 6.7812 17.1171L12 20.5963L17.2188 17.1171C18.3316 16.3752 19 15.1263 19 13.7889V4.60434L12 3.04879L5 4.60434ZM3.78307 2.82598L12 1L20.2169 2.82598C20.6745 2.92766 21 3.33347 21 3.80217V13.7889C21 15.795 19.9974 17.6684 18.3282 18.7812L12 23L5.6718 18.7812C4.00261 17.6684 3 15.795 3 13.7889V3.80217C3 3.33347 3.32553 2.92766 3.78307 2.82598ZM12 13.5L9.06107 15.0451L9.62236 11.7725L7.24472 9.45492L10.5305 8.97746L12 6L13.4695 8.97746L16.7553 9.45492L14.3776 11.7725L14.9389 15.0451L12 13.5Z"
                  />
                </svg>
              </span>
              <span
                class="text-truncate"
              >
                Best Practices
              </span>
            </div>
            <div
              class="text-center fw-bold font-monospace value "
            >
              95
            </div>
            <div
              class="flex-grow-1 position-relative mx-2 progressWrapper  "
            >
              <div
                class="position-absolute start-0 top-0 bottom-0 line"
                data-testid="line"
                style="width: 95%;"
              />
            </div>
          </div>
        </div>
        <div
          class="wrapper col-12"
        >
          <div
            class="d-flex flex-row bg-white position-relative border border-1 overflow-hidden"
          >
            <div
              class="d-flex flex-row align-items-center text-muted fw-bold flex-nowrap px-1 my-auto title"
            >
              <span
                class="pe-1 d-inline-block position-relative icon"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C9.243 2 7 4.243 7 7v2H6c-1.103 0-2 .897-2 2v9c0 1.103.897 2 2 2h12c1.103 0 2-.897 2-2v-9c0-1.103-.897-2-2-2h-1V7c0-2.757-2.243-5-5-5zM9 7c0-1.654 1.346-3 3-3s3 1.346 3 3v2H9V7zm9.002 13H13v-2.278c.595-.347 1-.985 1-1.722 0-1.103-.897-2-2-2s-2 .897-2 2c0 .736.405 1.375 1 1.722V20H6v-9h12l.002 9z"
                  />
                </svg>
              </span>
              <span
                class="text-truncate"
              >
                Security
              </span>
            </div>
            <div
              class="text-center fw-bold font-monospace value "
            >
              0
            </div>
            <div
              class="flex-grow-1 position-relative mx-2 progressWrapper  "
            >
              <div
                class="position-absolute start-0 top-0 bottom-0 line"
                data-testid="line"
                style="width: 1%;"
              />
            </div>
          </div>
        </div>
        <div
          class="wrapper col-12"
        >
          <div
            class="d-flex flex-row bg-white position-relative border border-1 overflow-hidden"
          >
            <div
              class="d-flex flex-row align-items-center text-muted fw-bold flex-nowrap px-1 my-auto title"
            >
              <span
                class="pe-1 d-inline-block position-relative icon"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.75 2.75V4.5h1.975c.351 0 .694.106.984.303l1.697 1.154c.041.028.09.043.14.043h4.102a.75.75 0 0 1 0 1.5H20.07l3.366 7.68a.749.749 0 0 1-.23.896c-.1.074-.203.143-.31.206a6.296 6.296 0 0 1-.79.399 7.349 7.349 0 0 1-2.856.569 7.343 7.343 0 0 1-2.855-.568 6.205 6.205 0 0 1-.79-.4 3.205 3.205 0 0 1-.307-.202l-.005-.004a.749.749 0 0 1-.23-.896l3.368-7.68h-.886c-.351 0-.694-.106-.984-.303l-1.697-1.154a.246.246 0 0 0-.14-.043H12.75v14.5h4.487a.75.75 0 0 1 0 1.5H6.763a.75.75 0 0 1 0-1.5h4.487V6H9.275a.249.249 0 0 0-.14.043L7.439 7.197c-.29.197-.633.303-.984.303h-.886l3.368 7.68a.75.75 0 0 1-.209.878c-.08.065-.16.126-.31.223a6.077 6.077 0 0 1-.792.433 6.924 6.924 0 0 1-2.876.62 6.913 6.913 0 0 1-2.876-.62 6.077 6.077 0 0 1-.792-.433 3.483 3.483 0 0 1-.309-.221.762.762 0 0 1-.21-.88L3.93 7.5H2.353a.75.75 0 0 1 0-1.5h4.102c.05 0 .099-.015.141-.043l1.695-1.154c.29-.198.634-.303.985-.303h1.974V2.75a.75.75 0 0 1 1.5 0ZM2.193 15.198a5.414 5.414 0 0 0 2.557.635 5.414 5.414 0 0 0 2.557-.635L4.75 9.368Zm14.51-.024c.082.04.174.083.275.126.53.223 1.305.45 2.272.45a5.847 5.847 0 0 0 2.547-.576L19.25 9.367Z"
                  />
                </svg>
              </span>
              <span
                class="text-truncate"
              >
                Legal
              </span>
            </div>
            <div
              class="text-center fw-bold font-monospace value "
            >
              75
            </div>
            <div
              class="flex-grow-1 position-relative mx-2 progressWrapper  "
            >
              <div
                class="position-absolute start-0 top-0 bottom-0 line"
                data-testid="line"
                style="width: 75%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
